adding images in assets

--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "Lit Note",
+    "name": "Post Notes",
     "version": "1.0",
     "manifest_version": 2,
     "description": "Take notes in the comfort of your browser.",
@@ -9,9 +9,9 @@
             "js": ["saveIt.js", "jquery-2.2.4.min.js"]
         }
     ],
-    "icons": { "16": "icon16.png",
-        "48": "icon48.png",
-       "128": "icon128.png" },
+    "icons": { "16": "./assets/paper.png",
+        "48": "./assets/paper.png",
+       "128": "./assets/postIt.png" },
     "permissions": [ "storage" ],
     "browser_action": {
         "default_popup": "popup_1.html",
